@@ -16,6 +16,6 @@ sqitch-rebase-usage - Sqitch rebase usage statement
        --no-verify                    do not run verify scripts
     -s --set <key=value>              set a database client variable
     -r --set-revert <key=value>       set a database client revert variable
-    -d --set-deploy <key=value>       set a database client deploy variable
+    -e --set-deploy <key=value>       set a database client deploy variable
        --log-only                     log changes without running them
     -y                                disable the prompt before reverting
