@@ -38,7 +38,7 @@ is_deeply [$CLASS->options], [qw(
     mode=s
     verify!
     set|s=s%
-    set-deploy|d=s%
+    set-deploy|e=s%
     set-revert|r=s%
     log-only
     y
